--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   http: 1.2.2
   getwidget: ^3.0.0
-  email_validator: 3.0.0
+  page_transition: ^2.0.9
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,6 +61,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/app_logo.png
+    - assets/shape.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
