--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   getwidget: ^3.0.0
   page_transition: ^2.0.9
   animate_do: ^3.1.2
+  intl_phone_number_input: ^0.7.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
