member appear success

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ flutter:
   assets:
     - assets/app_logo.png
     - assets/shape.png
+    - assets/user.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
