--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,10 @@ flutter:
     - assets/app_logo.png
     - assets/shape.png
     - assets/user.png
+    - assets/sick.png
+    - assets/bills.png
+    - assets/prescriptions.png
+    - assets/reports.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
