--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,13 @@ dependencies:
   flip_card: ^0.6.0
   patterns_canvas: ^0.4.0
   loading_animation_widget: ^1.3.0
+ 
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +78,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/app_logo.png
+    - assets/app_icon.png
     - assets/new_app_logo.png
     - assets/shape.png
     - assets/user.png
