--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,15 @@ dependencies:
   flip_card: ^0.6.0
   patterns_canvas: ^0.4.0
   loading_animation_widget: ^1.3.0
- 
-
+  animated_background: ^2.0.0
+  lottie: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
+  
+  
 
 dev_dependencies:
   flutter_test:
