--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/app_logo.png
+    - assets/background_img.jpg
+    - assets/background_img.png
     - assets/app_icon.png
     - assets/new_app_logo.png
     - assets/shape.png
