--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.2
   permission_handler: ^11.3.1
+  animated_text_kit: ^4.2.2
   
 
 dev_dependencies:
